feat(superadmin): add basic global feature conifguration ui

--- a/apps/superadmin-web/src/styles/globals.css
+++ b/apps/superadmin-web/src/styles/globals.css
@@ -31,6 +31,8 @@
     --destructive: 0 100% 50%;
     --destructive-foreground: 210 40% 98%;
 
+    --warning: 38 96% 50%;
+
     --ring: 215 20.2% 65.1%;
 
     --radius: 0.5rem;
